Fix white overlay z-index (#562)
* Fixes white overlay z-positioning

* Fix white overlay z-index

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -938,6 +938,12 @@ footer
   -khtml-opacity: 0.5
   opacity: 0.7
 
+#transloadit
+  z-index: 12000 !important
+
+#transloadit_expose
+  z-index: 11000 !important
+
 .popup
   @include border-radius($border_radius)
   border: 1px solid #464646
@@ -985,6 +991,8 @@ input.file
   width: 100%
   top: 0
   left: 0
+  font-size: 0
+  cursor: pointer
 
 .top_jumper
   display: block
